--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,22 +2,23 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -28,9 +29,10 @@ android {
 
 repositories {
     mavenCentral()
+    google()
 }
 
-def htextview_version = "0.1.2"
+def htextview_version = "0.1.6"
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
